2007-08-29  Mark Ellis  <mark@mpellis.org.uk>

	* implement get volume free space

2007-08-25  Mark Ellis  <mark@mpellis.org.uk>

	* build system cleanup, require gnomevfs 2.14
	* general tidy, minor fixes
	* fix to file info and permissions

2007-08-23  Mark Ellis  <mark@mpellis.org.uk>

	* use time_fields_from_filetime() instead of filetime_to_unix_time()

2007-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* corrections to src/Makefile.am

2007-05-09  Mark Ellis  <mark@mpellis.org.uk>
	* fixed invalid return in _open & _create if mode GENERIC_WRITE
	* added and tidied debugging output
	* added --without-verbose-debug to configure
	* fix var expansion for later autoconf version
	* fixed memory leak in close_dir
	* modified open_dir for Applications
	* added more error codes

2007-05-05  Mark Ellis  <mark@mpellis.org.uk>

	* corrected gnome-vfs system config file
	* fixed bug when url points to non-existent file
	* updated configure.ac.in and corrected version handling
	* fixed storage of HANDLE on non 64-bit platforms in _seek & _tell

2007-05-02  Mark Ellis  <mark@mpellis.org.uk>

	* fixed incompatible pointer types
	* fixed storage of HANDLE on non 64-bit platforms

2003-12-31  Mattias Eriksson  <snaggen@acc.umu.se>

	* Added a ChangeLog and other files wanted by automake.
	* Made the gnome-vfs module threadsafe.
	* Use gnome_vfs functions for escaping the URI.
	* Use UTF-8 instead of ascii (since this is what gnome-vfs uses).
	* Replace printf for debug with a debug-macro D thats enabled
	  with --enable-debug=yes
	* Added gnome-vfs function for renaming files.
	* Bugfix for deleting directories.
	* Plugged some memleak.
